<?xml version="1.0" encoding="utf-8" ?>
<com.google.android.material.card.MaterialCardView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginBottom="24dp"
  app:cardElevation="3dp"
  app:strokeWidth="0dp"
  app:cardCornerRadius="20dp"
>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
  >

        <com.google.android.material.textview.MaterialTextView
      android:id="@+id/tv_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="?attr/textAppearanceBodyLarge"
      android:textColor="?attr/colorPrimary"
      android:textStyle="bold"
      android:text=""
    />

        <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="12dp"
    >

            <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_first_val"
        style="@style/RoundedOutlinedTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint=""
      >

                <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/et_first_val"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="numberDecimal"
        />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_first_in"
        style="@style/RoundedOutlinedTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_weight="1"
        android:hint="@string/et_inch_hind"
        android:visibility="visible"
      >

                <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/et_first_in"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="numberDecimal"
          android:maxLength="5"
        />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="12dp"
    >

            <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_second_val"
        style="@style/RoundedOutlinedTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint=""
      >

                <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/et_second_val"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="numberDecimal"
        />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_second_in"
        style="@style/RoundedOutlinedTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_weight="1"
        android:hint="@string/et_inch_hind"
        android:visibility="visible"
      >

                <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/et_second_in"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="numberDecimal"
          android:maxLength="5"
        />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.chip.ChipGroup
      android:id="@+id/chip_group_unit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="12dp"
      app:singleSelection="true"
      app:selectionRequired="true"
      app:chipSpacingHorizontal="8dp"
      app:chipSpacingVertical="1dp"
    >

            <com.google.android.material.chip.Chip
        android:id="@+id/chip_ft"
        style="@style/Widget.Material3.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_feet"
        app:checkedIcon="@drawable/ic_check"
        app:checkedIconVisible="true"
      />

            <com.google.android.material.chip.Chip
        android:id="@+id/chip_inch"
        style="@style/Widget.Material3.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_inch"
        app:checkedIcon="@drawable/ic_check"
        app:checkedIconVisible="true"
      />

            <com.google.android.material.chip.Chip
        android:id="@+id/chip_hat"
        style="@style/Widget.Material3.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_hat"
        app:checkedIcon="@drawable/ic_check"
        app:checkedIconVisible="true"
      />

            <com.google.android.material.chip.Chip
        android:id="@+id/chip_meter"
        style="@style/Widget.Material3.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_meter"
        app:checkedIcon="@drawable/ic_check"
        app:checkedIconVisible="true"
      />

        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
